--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -6,13 +6,16 @@ on:
     branches: [ master ]
 jobs:
   tests:
+    strategy:
+      matrix:
+        version: [2.7.5, 3.0.4]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
       with:
-        ruby-version: 3.0
+        ruby-version: ${{ matrix.version }}
     - name: Install dependencies
       run: bundle install
     - name: Run tests
